--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
 
                 <div class="sd-3">
-                    <div class="line-side">&nbsp;</div>
+                    <div class="line-sid">&nbsp;</div>
                     <h2 class="what">DATASET DEFINITIONS</h2>
                     <div class="line-side">&nbsp;</div>
 
@@ -165,11 +165,24 @@
                             </iframe>
                         </div>
 
-                        <h3 class="colophon-1">Colors <span class="color">#FCFF6C</span> and <span
-                                class="orange">#FF9718</span> derive
-                            from the New York City Economic Development Corporation branding and the Graffiti-Free NYC
-                            <a href="./ASSETS/IMAGES/graffiti-free-nyc-truck.jpg">trucks</a>.
+                        <h3 class="colophon-1">Colors <button id="myBtn" class="color">#FCFF6C</button> and <button
+                                id="myBtn2" class="orange">#FF9718</button> derive from the New York City Economic
+                            Development Corporation and Graffiti-Free NYC.
                         </h3>
+
+                        <div id="myModal" class="modal">
+                            <div class="modal-content">
+                                <span class="close">&times;</span>
+                                <img src="./ASSETS/IMAGES/nyc-edc.png" alt="♡ have a nice day ♡">
+                            </div>
+                        </div>
+
+                        <div id="myModal2" class="modal">
+                            <div class="modal-content">
+                                <span class="close2">&times;</span>
+                                <img src="./ASSETS/IMAGES/graffiti-free-nyc-truck.jpg" alt="♡ have a nice day ♡">
+                            </div>
+                        </div>
 
                         <h3 class="colophon-2">Typeface is <a
                                 href="https://wisetype.nl/collections/wt-saltburn">Saltburn</a> by
@@ -195,8 +208,8 @@
         <div class="collection"></div>
     </div>
 
-    <footer id="footer-style">
-        <h3 class="footer-main">Chloe Yiu, 2023</h3>
+    <footer id="footer-style" class="container">
+        <h3 class="footer-main scramble">Chloe Yiu, 2023</h3>
     </footer>
 </body>
 
