Update css and html
• Switched the span to a div so the area to close the modal is larger
• Refined mobile view

--- a/index.html
+++ b/index.html
@@ -172,14 +172,14 @@
 
                         <div id="myModal" class="modal">
                             <div class="modal-content">
-                                <span class="close">&times;</span>
+                                <div class="close">&times;</div>
                                 <img src="./ASSETS/IMAGES/nyc-edc.png" alt="♡ have a nice day ♡">
                             </div>
                         </div>
 
                         <div id="myModal2" class="modal">
                             <div class="modal-content">
-                                <span class="close2">&times;</span>
+                                <div class="close2">&times;</div>
                                 <img src="./ASSETS/IMAGES/graffiti-free-nyc-truck.jpg" alt="♡ have a nice day ♡">
                             </div>
                         </div>
