--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
 
                 <div class="sd-3">
-                    <div class="line-sid">&nbsp;</div>
+                    <div class="line-side">&nbsp;</div>
                     <h2 class="what">DATASET DEFINITIONS</h2>
                     <div class="line-side">&nbsp;</div>
 
