Revisions made after Thursday's critique

--- a/index.html
+++ b/index.html
@@ -16,24 +16,28 @@
 <body class="wrapper">
 
     <div id="mySidenav" class="sidenav">
-        <a id="arrow-left" class="close-btn" onclick="closeNav()">&larr;</a>
+        <a id="arrow-left" class="close-btn" onclick="closeNav()">⬅</a>
+        <!-- &larr; -->
+        <!-- &times; -->
         <div class="site-description">
             <div class="site-description-wrapper">
                 <div class="side-head">
                     <div class="side-title">
-                        <h2 class="side-title" style="margin-bottom:3rem;">DSNY-GRAFFITI-TRACKING-MANAHTTAN</h2>
+                        <h2 class="side-title">DSNY-GRAFFITI-TRACKING-MANHATTAN</h2>
                     </div>
                     <div class="subhead">
                         <div class="spacing-small">
-                            <h3>Open Data NYC</h3>
+                            <h3><a style="border-bottom: 0;" href="https://opendata.cityofnewyork.us/">Open Data NYC</a>
+                            </h3>
                             <h2>SOURCE</h2>
                         </div>
                         <div class="spacing-small">
-                            <h3>Department of Sanitation (DSNY)</h3>
+                            <h3><a style="border-bottom: 0;" href="https://www.nyc.gov/assets/dsny/site/home">Department
+                                    of Sanitation (DSNY)</a></h3>
                             <h2>GOVERNMENT AGENCY</h2>
                         </div>
                         <div class="designer spacing-small">
-                            <h3>Chloe Yiu</h3>
+                            <h3><a style="border-bottom: 0;">Chloe Yiu</a></h3>
                             <h2>DESIGNER</h2>
                         </div>
                     </div>
@@ -60,16 +64,16 @@
                     <div class="line-side">&nbsp;</div>
 
                     <div class="space">
-                        <h3 class="shorter">
+                        <h3 class="shortest">
                             The Graffiti-Free NYC Program removes illicit markings across the five boroughs.
                         </h3>
-                        <h3 class="shorter">
+                        <h3 class="shortest">
                             <br>Graffiti-Free NYC is a cooperative effort among the NYC Economic Development
                             Corporation,
                             the DSNY, and the Office of the Mayor. For more information, see <a
                                 href="https://edc.nyc/program/graffiti-free-nyc">here</a>.
                         </h3>
-                        <h3 class="shorter"><br>DSNY-GRAFFITI-TRACKING-MANHATTAN displays coordinates of graffiti
+                        <h3 class="shortest"><br>DSNY-GRAFFITI-TRACKING-MANHATTAN displays coordinates of graffiti
                             incidences
                             in Manhattan from January 1, 2022, to January 5, 2022, and their corresponding resolutions.
                         </h3>
@@ -201,10 +205,11 @@
     </div>
 
     <div id="hamburger">
-        <span id="arrow" style="cursor:pointer" onclick="openNav()">&rarr;</span>
+        <span id="arrow" style="cursor:pointer" onclick="openNav()">⮕</span>
+        <!-- &rarr; -->
     </div>
 
-    <div class="container">
+    <div class="collection-container">
         <div class="collection"></div>
     </div>
 
