Editing the arrows

--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 <body class="wrapper">
 
     <div id="mySidenav" class="sidenav">
-        <a id="arrow-left" class="close-btn" onclick="closeNav()">⬅</a>
+        <a id="arrow-left" class="close-btn flip" onclick="closeNav()">➔</a>
         <!-- &larr; -->
         <!-- &times; -->
+        <!-- ⬅ -->
         <div class="site-description">
             <div class="site-description-wrapper">
                 <div class="side-head">
@@ -205,8 +206,9 @@
     </div>
 
     <div id="hamburger">
-        <span id="arrow" style="cursor:pointer" onclick="openNav()">⮕</span>
+        <span id="arrow" style="cursor:pointer" onclick="openNav()">➔</span>
         <!-- &rarr; -->
+        <!-- ⮕ -->
     </div>
 
     <div class="collection-container">
