Mobile view adjusted
Refining

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>DSNY Graffiti</title>
     <link rel="stylesheet" type="text/css" href="./ASSETS/reset.css">
     <link rel="stylesheet" type="text/css" href="./ASSETS/style.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js"></script>
     <script type="text/javascript" src="./ASSETS/data.js" defer></script>
     <!-- 
         Community Boards assess the needs of their own neighborhoods, meet with city agencies and make recommendations in the City's budget process to address them.
