--- a/index.html
+++ b/index.html
@@ -1,225 +1,314 @@
 <!DOCTYPE html>
 <html lang="en">
+	<head>
+		<meta charset="utf-8" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1" />
+		<title>DSNY Graffiti</title>
+		<link
+			rel="stylesheet"
+			type="text/css"
+			href="./ASSETS/reset.css" />
+		<link
+			rel="stylesheet"
+			type="text/css"
+			href="./ASSETS/style.css" />
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js"></script>
+		<script
+			type="text/javascript"
+			src="./ASSETS/data.js"
+			defer></script>
+		<link
+			rel="apple-touch-icon"
+			sizes="180x180"
+			href="/apple-touch-icon.png" />
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="/favicon-32x32.png" />
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="16x16"
+			href="/favicon-16x16.png" />
+		<link
+			rel="manifest"
+			href="/site.webmanifest" />
 
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>DSNY Graffiti</title>
-    <link rel="stylesheet" type="text/css" href="./ASSETS/reset.css">
-    <link rel="stylesheet" type="text/css" href="./ASSETS/style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.6.0/p5.min.js"></script>
-    <script type="text/javascript" src="./ASSETS/data.js" defer></script>
-    <!-- 
+		<!-- 
         Community Boards assess the needs of their own neighborhoods, meet with city agencies and make recommendations in the City's budget process to address them.
      -->
-</head>
+	</head>
 
-<body class="wrapper">
+	<body class="wrapper">
+		<div
+			id="mySidenav"
+			class="sidenav">
+			<a
+				id="arrow-left"
+				class="close-btn flip"
+				onclick="closeNav()"
+				>➔</a
+			>
+			<!-- &larr; -->
+			<!-- &times; -->
+			<!-- ⬅ -->
+			<div class="site-description">
+				<div class="site-description-wrapper">
+					<div class="side-head">
+						<div class="side-title">
+							<h2 class="side-title">DSNY-GRAFFITI-TRACKING-MANHATTAN</h2>
+						</div>
+						<div class="subhead">
+							<div class="spacing-small">
+								<h3>
+									<a
+										style="border-bottom: 0"
+										href="https://opendata.cityofnewyork.us/"
+										>Open Data NYC</a
+									>
+								</h3>
+								<h2>SOURCE</h2>
+							</div>
+							<div class="spacing-small">
+								<h3>
+									<a
+										style="border-bottom: 0"
+										href="https://www.nyc.gov/assets/dsny/site/home"
+										>Department of Sanitation (DSNY)</a
+									>
+								</h3>
+								<h2>GOVERNMENT AGENCY</h2>
+							</div>
+							<div class="designer spacing-small">
+								<h3><a style="border-bottom: 0">Chloe Yiu</a></h3>
+								<h2>DESIGNER</h2>
+							</div>
+						</div>
+					</div>
 
-    <div id="mySidenav" class="sidenav">
-        <a id="arrow-left" class="close-btn flip" onclick="closeNav()">➔</a>
-        <!-- &larr; -->
-        <!-- &times; -->
-        <!-- ⬅ -->
-        <div class="site-description">
-            <div class="site-description-wrapper">
-                <div class="side-head">
-                    <div class="side-title">
-                        <h2 class="side-title">DSNY-GRAFFITI-TRACKING-MANHATTAN</h2>
-                    </div>
-                    <div class="subhead">
-                        <div class="spacing-small">
-                            <h3><a style="border-bottom: 0;" href="https://opendata.cityofnewyork.us/">Open Data NYC</a>
-                            </h3>
-                            <h2>SOURCE</h2>
-                        </div>
-                        <div class="spacing-small">
-                            <h3><a style="border-bottom: 0;" href="https://www.nyc.gov/assets/dsny/site/home">Department
-                                    of Sanitation (DSNY)</a></h3>
-                            <h2>GOVERNMENT AGENCY</h2>
-                        </div>
-                        <div class="designer spacing-small">
-                            <h3><a style="border-bottom: 0;">Chloe Yiu</a></h3>
-                            <h2>DESIGNER</h2>
-                        </div>
-                    </div>
-                </div>
+					<div class="sd-1">
+						<div class="line-side">&nbsp;</div>
+						<h2 class="what">HOW TO USE</h2>
+						<div class="line-side">&nbsp;</div>
 
-                <div class="sd-1">
-                    <div class="line-side">&nbsp;</div>
-                    <h2 class="what">
-                        HOW TO USE
-                    </h2>
-                    <div class="line-side">&nbsp;</div>
+						<div class="space">
+							<h3 class="short color">
+								Click the coordinates to view report details provided by the
+								Department of Sanitation (DSNY).
+							</h3>
+						</div>
+					</div>
 
-                    <div class="space">
-                        <h3 class="short color"> Click the coordinates to view report details provided by the
-                            Department of Sanitation (DSNY).</h3>
-                    </div>
-                </div>
+					<div class="sd-2">
+						<div class="line-side">&nbsp;</div>
+						<h2 class="what">INFORMATION</h2>
+						<div class="line-side">&nbsp;</div>
 
-                <div class="sd-2">
-                    <div class="line-side">&nbsp;</div>
-                    <h2 class="what">
-                        INFORMATION
-                    </h2>
-                    <div class="line-side">&nbsp;</div>
+						<div class="space">
+							<h3 class="shortest">
+								The Graffiti-Free NYC Program removes illicit markings across
+								the five boroughs.
+							</h3>
+							<h3 class="shortest">
+								<br />Graffiti-Free NYC is a cooperative effort among the NYC
+								Economic Development Corporation, the DSNY, and the Office of
+								the Mayor. For more information, see
+								<a href="https://edc.nyc/program/graffiti-free-nyc">here</a>.
+							</h3>
+							<h3 class="shortest">
+								<br />DSNY-GRAFFITI-TRACKING-MANHATTAN displays coordinates of
+								graffiti incidences in Manhattan from January 1, 2022, to
+								January 5, 2022, and their corresponding resolutions.
+							</h3>
+							<h3>
+								<br />To view the complete DSNY Graffiti Tracking dataset, see
+								<a
+									href="https://data.cityofnewyork.us/City-Government/DSNY-Graffiti-Tracking/gpwd-npar"
+									>here</a
+								>.
+							</h3>
+						</div>
+					</div>
 
-                    <div class="space">
-                        <h3 class="shortest">
-                            The Graffiti-Free NYC Program removes illicit markings across the five boroughs.
-                        </h3>
-                        <h3 class="shortest">
-                            <br>Graffiti-Free NYC is a cooperative effort among the NYC Economic Development
-                            Corporation,
-                            the DSNY, and the Office of the Mayor. For more information, see <a
-                                href="https://edc.nyc/program/graffiti-free-nyc">here</a>.
-                        </h3>
-                        <h3 class="shortest"><br>DSNY-GRAFFITI-TRACKING-MANHATTAN displays coordinates of graffiti
-                            incidences
-                            in Manhattan from January 1, 2022, to January 5, 2022, and their corresponding resolutions.
-                        </h3>
-                        <h3><br>To view the complete DSNY Graffiti Tracking dataset, see <a
-                                href="https://data.cityofnewyork.us/City-Government/DSNY-Graffiti-Tracking/gpwd-npar">here</a>.
-                        </h3>
-                    </div>
-                </div>
+					<div class="sd-3">
+						<div class="line-side">&nbsp;</div>
+						<h2 class="what">DATASET DEFINITIONS</h2>
+						<div class="line-side">&nbsp;</div>
 
-                <div class="sd-3">
-                    <div class="line-side">&nbsp;</div>
-                    <h2 class="what">DATASET DEFINITIONS</h2>
-                    <div class="line-side">&nbsp;</div>
+						<div class="specifics">
+							<div class="terms">
+								<h2>Community Board</h2>
+								<h2>Police Precinct</h2>
+								<h2>City Council District</h2>
+								<h2>Created Date</h2>
+								<h2>Status</h2>
+								<h2>Resolution Action</h2>
+								<h2>Closed Date</h2>
+							</div>
+							<div class="description">
+								<h3>One of the 59 Community Boards of NYC</h3>
+								<h3>One of the 77 Police Precincts in NYC</h3>
+								<h3>One of the 51 Council Districts that govern NYC</h3>
+								<h3>Date graffiti was reported</h3>
+								<h3>Status of reported graffiti complaint</h3>
+								<h3>
+									Description of actions taken to resolve graffiti complaint
+								</h3>
+								<h3>Date issue was closed</h3>
+							</div>
+						</div>
 
-                    <div class="specifics">
-                        <div class="terms">
-                            <h2>Community Board</h2>
-                            <h2>Police Precinct</h2>
-                            <h2>City Council District</h2>
-                            <h2>Created Date</h2>
-                            <h2>Status</h2>
-                            <h2>Resolution Action</h2>
-                            <h2>Closed Date</h2>
-                        </div>
-                        <div class="description">
-                            <h3>One of the 59 Community Boards of NYC</h3>
-                            <h3>One of the 77 Police Precincts in NYC</h3>
-                            <h3>One of the 51 Council Districts that govern NYC</h3>
-                            <h3>Date graffiti was reported</h3>
-                            <h3>Status of reported graffiti complaint</h3>
-                            <h3>Description of actions taken to resolve graffiti complaint</h3>
-                            <h3>Date issue was closed</h3>
-                        </div>
-                    </div>
+						<div class="small-specifics">
+							<div>
+								<div class="small-term">
+									<h2>Community Board</h2>
+									<h3>One of the 59 Community Boards of NYC</h3>
+								</div>
 
-                    <div class="small-specifics">
-                        <div>
-                            <div class="small-term">
-                                <h2>Community Board</h2>
-                                <h3>One of the 59 Community Boards of NYC</h3>
-                            </div>
+								<div class="small-term">
+									<h2>Police Precinct</h2>
+									<h3>One of the 77 Police Precincts in NYC</h3>
+								</div>
 
-                            <div class="small-term">
-                                <h2>Police Precinct</h2>
-                                <h3>One of the 77 Police Precincts in NYC</h3>
-                            </div>
+								<div class="small-term">
+									<h2>City Council District</h2>
+									<h3>One of the 51 Council Districts that govern NYC</h3>
+								</div>
 
-                            <div class="small-term">
-                                <h2>City Council District</h2>
-                                <h3>One of the 51 Council Districts that govern NYC</h3>
-                            </div>
+								<div class="small-term">
+									<h2>Created Date</h2>
+									<h3>Date graffiti was reported</h3>
+								</div>
 
-                            <div class="small-term">
-                                <h2>Created Date</h2>
-                                <h3>Date graffiti was reported</h3>
-                            </div>
+								<div class="small-term">
+									<h2>Status</h2>
+									<h3>Status of reported graffiti complaint</h3>
+								</div>
 
-                            <div class="small-term">
-                                <h2>Status</h2>
-                                <h3>Status of reported graffiti complaint</h3>
-                            </div>
+								<div class="small-term">
+									<h2>Resolution Action</h2>
+									<h3>
+										Description of actions taken to resolve graffiti complaint
+									</h3>
+								</div>
 
-                            <div class="small-term">
-                                <h2>Resolution Action</h2>
-                                <h3>Description of actions taken to resolve graffiti complaint</h3>
-                            </div>
+								<div class="small-term">
+									<h2>Closed Date</h2>
+									<h3>Date issue was closed</h3>
+								</div>
+							</div>
+						</div>
+					</div>
 
-                            <div class="small-term">
-                                <h2>Closed Date</h2>
-                                <h3>Date issue was closed</h3>
-                            </div>
-                        </div>
-                    </div>
+					<div class="sd-4">
+						<div class="line-side">&nbsp;</div>
+						<h2 class="what">COLOPHON</h2>
+						<div class="line-side">&nbsp;</div>
 
-                </div>
+						<div class="colophon">
+							<div class="colophon-3">
+								<h3>
+									Chloe listened to
+									<a
+										href="https://open.spotify.com/playlist/2aoQOfSZVCEb35E1x9gRLo?si=a1ef7cb8f21f406d"
+										>this playlist</a
+									>
+									while developing the site.
+								</h3>
+								<iframe
+									style="border-radius: 1rem; padding-top: 1rem; margin: 0"
+									src="https://open.spotify.com/embed/playlist/2aoQOfSZVCEb35E1x9gRLo?utm_source=generator"
+									width="100%"
+									height="100"
+									frameborder=""
+									allowfullscreen=""
+									allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+									loading="lazy">
+								</iframe>
+							</div>
 
-                <div class="sd-4">
-                    <div class="line-side">&nbsp;</div>
-                    <h2 class="what">COLOPHON</h2>
-                    <div class="line-side">&nbsp;</div>
+							<h3 class="colophon-1">
+								Colors
+								<button
+									id="myBtn"
+									class="color">
+									#FCFF6C
+								</button>
+								and
+								<button
+									id="myBtn2"
+									class="orange">
+									#FF9718
+								</button>
+								derive from the New York City Economic Development Corporation
+								and Graffiti-Free NYC.
+							</h3>
 
-                    <div class="colophon">
-                        <div class="colophon-3">
-                            <h3>Chloe listened to <a
-                                    href="https://open.spotify.com/playlist/2aoQOfSZVCEb35E1x9gRLo?si=a1ef7cb8f21f406d">this
-                                    playlist</a> while developing the site.
-                            </h3>
-                            <iframe style="border-radius:1rem; padding-top: 1rem; margin: 0;"
-                                src="https://open.spotify.com/embed/playlist/2aoQOfSZVCEb35E1x9gRLo?utm_source=generator"
-                                width="100%" height="100" frameBorder="" allowfullscreen=""
-                                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-                                loading="lazy">
-                            </iframe>
-                        </div>
+							<div
+								id="myModal"
+								class="modal">
+								<div class="modal-content">
+									<div class="close">&times;</div>
+									<img
+										src="./ASSETS/IMAGES/nyc-edc.png"
+										alt="♡ have a nice day ♡" />
+								</div>
+							</div>
 
-                        <h3 class="colophon-1">Colors <button id="myBtn" class="color">#FCFF6C</button> and <button
-                                id="myBtn2" class="orange">#FF9718</button> derive from the New York City Economic
-                            Development Corporation and Graffiti-Free NYC.
-                        </h3>
+							<div
+								id="myModal2"
+								class="modal">
+								<div class="modal-content">
+									<div class="close2">&times;</div>
+									<img
+										src="./ASSETS/IMAGES/graffiti-free-nyc-truck.jpg"
+										alt="♡ have a nice day ♡" />
+								</div>
+							</div>
 
-                        <div id="myModal" class="modal">
-                            <div class="modal-content">
-                                <div class="close">&times;</div>
-                                <img src="./ASSETS/IMAGES/nyc-edc.png" alt="♡ have a nice day ♡">
-                            </div>
-                        </div>
+							<h3 class="colophon-2">
+								Typeface is
+								<a href="https://wisetype.nl/collections/wt-saltburn"
+									>Saltburn</a
+								>
+								by WiseType®
+							</h3>
+						</div>
+					</div>
+				</div>
+				<div>
+					<footer>
+						<h3 id="footer">
+							FIND THIS SITE TOTALLY AWESOME AND COOL? SEND CHLOE A LATTE.
+						</h3>
+					</footer>
+				</div>
+			</div>
+		</div>
 
-                        <div id="myModal2" class="modal">
-                            <div class="modal-content">
-                                <div class="close2">&times;</div>
-                                <img src="./ASSETS/IMAGES/graffiti-free-nyc-truck.jpg" alt="♡ have a nice day ♡">
-                            </div>
-                        </div>
+		<div id="hamburger">
+			<span
+				id="arrow"
+				style="cursor: pointer"
+				onclick="openNav()"
+				>➔</span
+			>
+			<!-- &rarr; -->
+			<!-- ⮕ -->
+		</div>
 
-                        <h3 class="colophon-2">Typeface is <a
-                                href="https://wisetype.nl/collections/wt-saltburn">Saltburn</a> by
-                            WiseType®
-                        </h3>
-                    </div>
-                </div>
-            </div>
-            <div>
-                <footer>
-                    <h3 id="footer">FIND THIS SITE TOTALLY AWESOME AND COOL? SEND CHLOE A LATTE.</h3>
-                </footer>
-            </div>
+		<div class="collection-container">
+			<div class="collection"></div>
+		</div>
 
-        </div>
-    </div>
-
-    <div id="hamburger">
-        <span id="arrow" style="cursor:pointer" onclick="openNav()">➔</span>
-        <!-- &rarr; -->
-        <!-- ⮕ -->
-    </div>
-
-    <div class="collection-container">
-        <div class="collection"></div>
-    </div>
-
-    <footer id="footer-style" class="container">
-        <h3 class="footer-main scramble">Chloe Yiu, 2023</h3>
-    </footer>
-</body>
-
+		<footer
+			id="footer-style"
+			class="container">
+			<h3 class="footer-main scramble">Chloe Yiu, 2023</h3>
+		</footer>
+	</body>
 </html>
