update the file paths and mobile

--- a/index.html
+++ b/index.html
@@ -23,20 +23,20 @@
 		<link
 			rel="apple-touch-icon"
 			sizes="180x180"
-			href="/apple-touch-icon.png" />
+			href="./ASSETS/FAVICON/apple-touch-icon.png" />
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="32x32"
-			href="/favicon-32x32.png" />
+			href="./ASSETS/FAVICON/favicon-32x32.png" />
 		<link
 			rel="icon"
 			type="image/png"
 			sizes="16x16"
-			href="/favicon-16x16.png" />
+			href="./ASSETS/FAVICON/favicon-16x16.png" />
 		<link
 			rel="manifest"
-			href="/site.webmanifest" />
+			href="./ASSETS/FAVICON/site.webmanifest" />
 
 		<!-- 
         Community Boards assess the needs of their own neighborhoods, meet with city agencies and make recommendations in the City's budget process to address them.
